--- a/package.json
+++ b/package.json
@@ -1,26 +1,41 @@
 {
-	"name": "kitty",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"start": "svelte-kit start",
-		"lint": "prettier --check .",
-		"format": "prettier --write ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-node": "next",
-		"@sveltejs/kit": "next",
-		"svelte": "^3.29.0",
-		"vite": "^2.1.0",
-		"typescript": "^4.0.0",
-		"tslib": "^2.0.0",
-		"svelte-preprocess": "^4.0.0",
-		"prettier": "~2.2.1",
-		"prettier-plugin-svelte": "^2.2.0"
-	},
-	"type": "module",
-	"engines": {
-		"node": ">= 12.17.0"
-	}
+  "name": "kitty",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "start": "svelte-kit start"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-node": "next",
+    "@sveltejs/kit": "next",
+    "svelte": "^3.29.0",
+    "vite": "^2.1.0",
+    "typescript": "^4.0.0",
+    "tslib": "^2.0.0",
+    "svelte-preprocess": "^4.0.0",
+    "prettier": "~2.2.1",
+    "prettier-plugin-svelte": "^2.2.0"
+  },
+  "type": "module",
+  "engines": {
+    "node": ">= 12.17.0"
+  },
+  "prettier": {
+    "useTabs": true,
+    "printWidth": 100,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "bracketSpacing": false,
+    "svelteSortOrder": "options-scripts-markup-styles",
+    "svelteBracketNewLine": true,
+    "overrides": [
+      {
+        "files": "*.json",
+        "options": {
+          "useTabs": false
+        }
+      }
+    ]
+  }
 }
