--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "devDependencies": {
     "@sveltejs/adapter-node": "next",
     "@sveltejs/kit": "next",
-    "svelte": "^3.29.0",
-    "vite": "^2.1.0",
-    "typescript": "^4.0.0",
-    "tslib": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
     "prettier": "~2.2.1",
-    "prettier-plugin-svelte": "^2.2.0"
+    "prettier-plugin-svelte": "^2.2.0",
+    "svelte": "^3.29.0",
+    "svelte-preprocess": "^4.0.0",
+    "tslib": "^2.0.0",
+    "typescript": "^4.0.0",
+    "vite": "^2.1.0"
   },
   "type": "module",
   "engines": {
