--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "svelte-kit start"
   },
   "devDependencies": {
+    "@feltcoop/gro": "^0.6.4",
     "@sveltejs/adapter-node": "next",
     "@sveltejs/kit": "next",
     "prettier": "~2.2.1",
