override json prettier config just for package.json

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "svelteBracketNewLine": true,
     "overrides": [
       {
-        "files": "*.json",
+        "files": "package.json",
         "options": {
           "useTabs": false
         }
