--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "svelte": "^3.29.0",
-    "svelte-preprocess": "^4.0.0",
+    "svelte-preprocess-esbuild": "^2.0.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0",
     "vite": "^2.1.0"
