--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@feltcoop/gro": "^0.13.0",
-    "@sveltejs/adapter-node": "next",
+    "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "next",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
