--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,18 @@
 	"compilerOptions": {
 		"moduleResolution": "node",
 		"target": "es2020",
+		"module": "es2020",
+		"strict": true,
 		"importsNotUsedAsValues": "error",
 		"isolatedModules": true,
 		"sourceMap": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
 		"baseUrl": ".",
 		"allowJs": true,
 		"checkJs": true,
