--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "kitty",
   "version": "0.0.1",
+  "type": "module",
+  "engines": {
+    "node": ">= 14.16.0"
+  },
   "scripts": {
     "dev": "gro dev",
     "build": "gro build",
@@ -8,19 +12,15 @@
   },
   "devDependencies": {
     "@feltcoop/gro": "^0.21.3",
-    "@sveltejs/adapter-static": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-static": "^1.0.0-next.4",
+    "@sveltejs/kit": "^1.0.0-next.84",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "svelte": "^3.29.0",
     "svelte-preprocess-esbuild": "^2.0.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.1.0",
     "typescript": "^4.0.0",
     "vite": "^2.1.0"
-  },
-  "type": "module",
-  "engines": {
-    "node": ">= 14.16.0"
   },
   "prettier": {
     "useTabs": true,
