update tsconfig settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,21 @@
 	"compilerOptions": {
 		"moduleResolution": "node",
 		"target": "es2020",
-		"module": "es2020",
+		"module": "esnext",
+		"lib": ["esnext", "dom"],
 		"strict": true,
-		"importsNotUsedAsValues": "error",
-		"isolatedModules": true,
-		"sourceMap": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
+		"importsNotUsedAsValues": "error",
+		"isolatedModules": true,
+		"sourceMap": true,
+		"importHelpers": true,
+		"esModuleInterop": true,
+		"skipLibCheck": true,
 		"baseUrl": ".",
-		"allowJs": true,
 		"checkJs": true,
 		"paths": {
 			"$app/*": [".svelte/dev/runtime/app/*", ".svelte/build/runtime/app/*"],
