--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "devDependencies": {
     "@feltcoop/gro": "^0.21.5",
-    "@sveltejs/adapter-static": "^1.0.0-next.7",
-    "@sveltejs/kit": "^1.0.0-next.94",
+    "@sveltejs/adapter-static": "1.0.0-next.7",
+    "@sveltejs/kit": "1.0.0-next.94",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "svelte": "^3.29.0",
