--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
   },
   "devDependencies": {
     "@feltcoop/gro": "^0.21.5",
-    "@sveltejs/adapter-static": "1.0.0-next.7",
-    "@sveltejs/kit": "1.0.0-next.94",
+    "@sveltejs/adapter-static": "^1.0.0-next.13",
+    "@sveltejs/kit": "^1.0.0-next.115",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "svelte": "^3.29.0",
     "svelte-preprocess-esbuild": "^2.0.0",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.4",
-    "vite": "^2.1.0"
+    "typescript": "^4.2.4"
   },
   "prettier": {
     "useTabs": true,
