update deps and add felt import example

--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "deploy": "gro deploy"
   },
   "devDependencies": {
-    "@feltcoop/gro": "^0.21.5",
+    "@feltcoop/felt": "^0.3.0",
+    "@feltcoop/gro": "^0.28.2",
     "@sveltejs/adapter-static": "^1.0.0-next.13",
-    "@sveltejs/kit": "^1.0.0-next.115",
-    "prettier": "~2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.29.0",
+    "@sveltejs/kit": "^1.0.0-next.120",
+    "prettier": "^2.3.2",
+    "prettier-plugin-svelte": "^2.3.1",
+    "svelte": "^3.38.3",
     "svelte-preprocess-esbuild": "^2.0.0",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5"
   },
   "prettier": {
     "useTabs": true,
