add noImplicitOverride to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noImplicitReturns": true,
+		"noImplicitOverride": true,
 		"noFallthroughCasesInSwitch": true,
 		"importsNotUsedAsValues": "error",
 		"isolatedModules": true,
