--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+	"include": ["src"],
 	"compilerOptions": {
 		"moduleResolution": "node",
 		"target": "es2020",
@@ -21,10 +22,7 @@
 		"baseUrl": ".",
 		"checkJs": true,
 		"paths": {
-			"$app/*": [".svelte/dev/runtime/app/*", ".svelte/build/runtime/app/*"],
-			"$service-worker": [".svelte/build/runtime/service-worker"],
 			"$lib/*": ["src/lib/*"]
 		}
-	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
+	}
 }
