--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
 		"module": "esnext",
 		"lib": ["esnext", "dom"],
 		"strict": true,
+		"useUnknownInCatchVariables": false,
+		"exactOptionalPropertyTypes": false,
 		"forceConsistentCasingInFileNames": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
