--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": ">= 16.6"
   },
   "scripts": {
+    "start": "gro dev",
     "dev": "gro dev",
     "build": "gro build",
     "test": "gro test",
