--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   },
   "devDependencies": {
     "@feltcoop/felt": "^0.16.0",
-    "@feltcoop/gro": "^0.47.5",
+    "@feltcoop/gro": "^0.49.0",
     "@sveltejs/adapter-static": "^1.0.0-next.22",
     "@sveltejs/kit": "^1.0.0-next.203",
     "prettier": "^2.5.1",
-    "prettier-plugin-svelte": "^2.5.1",
-    "svelte": "^3.44.3",
+    "prettier-plugin-svelte": "^2.6.0",
+    "svelte": "^3.46.1",
+    "svelte-check": "^2.3.0",
     "svelte-preprocess-esbuild": "^2.0.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
