--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "deploy": "gro deploy"
   },
   "devDependencies": {
+    "@feltcoop/eslint-config": "^0.1.3",
     "@feltcoop/felt": "^0.22.1",
     "@feltcoop/gro": "^0.52.3",
     "@sveltejs/adapter-static": "^1.0.0-next.22",
     "@sveltejs/kit": "^1.0.0-next.203",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint": "^8.11.0",
+    "eslint-plugin-svelte3": "^3.4.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.6.0",
     "svelte": "^3.46.3",
@@ -25,6 +30,10 @@
     "svelte-preprocess-esbuild": "^2.0.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": "@feltcoop"
   },
   "prettier": {
     "useTabs": true,
