--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "felt-template",
-  "description": "a web app template with SvelteKit, Gro, and Felt",
+  "description": "a static web app and Node library template with SvelteKit, Gro, and Felt",
   "version": "0.0.1",
   "type": "module",
   "homepage": "https://template.felt.dev",
