--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "homepage": "https://template.felt.dev",
   "engines": {
-    "node": ">= 16.6"
+    "node": ">=18.6"
   },
   "scripts": {
     "start": "gro dev",
@@ -15,29 +15,26 @@
     "deploy": "gro deploy"
   },
   "devDependencies": {
-    "@feltcoop/eslint-config": "^0.1.7",
-    "@feltcoop/felt": "^0.31.0",
-    "@feltcoop/gro": "^0.56.0",
-    "@sveltejs/adapter-static": "^1.0.0-next.32",
-    "@sveltejs/kit": "^1.0.0-next.345",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "eslint": "^8.14.0",
-    "eslint-plugin-svelte3": "^3.4.1",
-    "prettier": "^2.6.2",
+    "@feltcoop/eslint-config": "^0.2.0",
+    "@feltcoop/felt": "^0.35.0",
+    "@feltcoop/gro": "^0.59.0",
+    "@sveltejs/adapter-static": "^1.0.0-next.38",
+    "@sveltejs/kit": "^1.0.0-next.384",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.48.0",
-    "svelte-check": "^2.7.1",
+    "svelte": "^3.49.0",
+    "svelte-check": "^2.8.0",
     "svelte-preprocess-esbuild": "^2.0.0",
     "tslib": "^2.4.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.4"
   },
   "eslintConfig": {
     "root": true,
-    "extends": "@feltcoop",
-    "ignorePatterns": [
-      "svelte.config.js"
-    ]
+    "extends": "@feltcoop"
   },
   "prettier": {
     "useTabs": true,
