--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "svelte-check": "^2.9.0",
     "svelte-preprocess-esbuild": "^3.0.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "uvu": "^0.5.6"
   },
   "eslintConfig": {
     "root": true,
