--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
   },
   "devDependencies": {
     "@feltcoop/eslint-config": "^0.2.1",
-    "@feltcoop/felt": "^0.45.0",
-    "@feltcoop/gro": "^0.68.0",
-    "@feltcoop/util": "^0.4.0",
-    "@sveltejs/adapter-static": "^1.0.0-next.48",
-    "@sveltejs/kit": "^1.0.0-next.567",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.28.0",
+    "@feltcoop/felt": "^0.46.0",
+    "@feltcoop/gro": "^0.69.0",
+    "@feltcoop/util": "^0.5.0",
+    "@sveltejs/adapter-static": "^1.0.5",
+    "@sveltejs/kit": "^1.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "eslint": "^8.32.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
-    "svelte": "^3.53.1",
-    "svelte-check": "^2.9.2",
+    "prettier": "^2.8.3",
+    "prettier-plugin-svelte": "^2.9.0",
+    "svelte": "^3.55.1",
+    "svelte-check": "^3.0.2",
     "svelte-preprocess-esbuild": "^3.0.1",
     "tslib": "^2.4.1",
-    "typescript": "^4.9.3",
+    "typescript": "^4.9.4",
     "uvu": "^0.5.6"
   },
   "eslintConfig": {
