--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "deploy": "gro deploy"
   },
   "devDependencies": {
-    "@feltcoop/eslint-config": "^0.2.1",
     "@feltcoop/felt": "^0.46.0",
-    "@feltcoop/gro": "^0.70.0",
-    "@feltcoop/util": "^0.5.0",
+    "@feltjs/eslint-config": "^0.2.1",
+    "@feltjs/gro": "^0.70.0",
+    "@feltjs/util": "^0.5.0",
     "@sveltejs/adapter-static": "^1.0.5",
     "@sveltejs/kit": "^1.2.2",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
@@ -36,7 +36,7 @@
   },
   "eslintConfig": {
     "root": true,
-    "extends": "@feltcoop"
+    "extends": "@feltjs"
   },
   "prettier": {
     "useTabs": true,
