--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
   },
   "eslintConfig": {
     "root": true,
-    "extends": "@feltjs"
+    "extends": "@feltjs",
+    "ignorePatterns": [
+      "svelte.config.js",
+      "vite.config.js"
+    ]
   },
   "prettier": {
     "useTabs": true,
