--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
     "deploy": "gro deploy"
   },
   "devDependencies": {
-    "@feltjs/eslint-config": "^0.2.1",
+    "@feltjs/eslint-config": "^0.3.0",
     "@feltjs/felt-ui": "^0.61.0",
-    "@feltjs/gro": "^0.78.0",
+    "@feltjs/gro": "^0.78.1",
     "@feltjs/util": "^0.8.0",
     "@sveltejs/adapter-static": "^2.0.2",
-    "@sveltejs/kit": "^1.20.4",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@sveltejs/kit": "^1.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "eslint": "^8.43.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-svelte": "^2.32.0",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
-    "svelte": "^3.59.2",
+    "svelte": "^4.0.0",
     "svelte-check": "^3.4.4",
     "svelte-preprocess-esbuild": "^3.0.1",
-    "tslib": "^2.5.3",
-    "typescript": "^5.1.3",
+    "tslib": "^2.6.0",
+    "typescript": "^5.1.5",
     "uvu": "^0.5.6"
   },
   "eslintConfig": {
