--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
 		"importHelpers": true,
 		"skipLibCheck": true,
 		"allowJs": true,
-		"checkJs": true
+		"checkJs": true,
+		"noEmit": true
 	}
 }
