--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     ]
   },
   "prettier": {
+    "plugins": [
+      "prettier-plugin-svelte"
+    ],
     "useTabs": true,
     "printWidth": 100,
     "singleQuote": true,
