--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "homepage": "https://template.felt.dev/",
   "repository": "https://github.com/feltjs/felt-template",
   "engines": {
-    "node": ">=18.6"
+    "node": ">=20.5"
   },
   "scripts": {
     "start": "gro dev",
@@ -18,17 +18,18 @@
   },
   "devDependencies": {
     "@feltjs/eslint-config": "^0.3.1",
-    "@feltjs/felt-ui": "^0.66.1",
-    "@feltjs/gro": "^0.80.0",
+    "@feltjs/felt-ui": "^0.66.2",
+    "@feltjs/gro": "^0.82.1",
     "@feltjs/util": "^0.9.0",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.22.6",
+    "@sveltejs/package": "^2.2.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
     "eslint-plugin-svelte": "^2.32.2",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.1",
+    "prettier": "^3.0.3",
+    "prettier-plugin-svelte": "^3.0.3",
     "svelte": "^4.2.0",
     "svelte-check": "^3.4.6",
     "svelte-preprocess-esbuild": "^3.0.1",
@@ -45,10 +46,12 @@
     ]
   },
   "prettier": {
+    "plugins": [
+      "prettier-plugin-svelte"
+    ],
     "useTabs": true,
     "printWidth": 100,
     "singleQuote": true,
-    "trailingComma": "all",
     "bracketSpacing": false,
     "overrides": [
       {
@@ -58,5 +61,11 @@
         }
       }
     ]
+  },
+  "exports": {
+    "./example.js": {
+      "default": "./dist/example.js",
+      "types": "./dist/example.d.ts"
+    }
   }
 }
