--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
 		"types": ["@sveltejs/kit"],
+		"moduleResolution": "bundler",
 		"strict": true,
 		"useUnknownInCatchVariables": false,
 		"exactOptionalPropertyTypes": false,
@@ -16,6 +17,7 @@
 		"importHelpers": true,
 		"skipLibCheck": true,
 		"allowJs": true,
-		"checkJs": true
+		"checkJs": true,
+		"noEmit": true
 	}
 }
