update vite config to ts

--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "root": true,
     "extends": "@feltjs",
     "ignorePatterns": [
+      "gro.config.ts",
       "svelte.config.js",
-      "vite.config.js"
+      "vite.config.ts"
     ]
   },
   "prettier": {
