--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "deploy": "gro deploy"
   },
   "devDependencies": {
-    "@feltjs/eslint-config": "^0.3.1",
+    "@feltjs/eslint-config": "^0.4.0",
     "@feltjs/felt-ui": "^0.66.2",
-    "@feltjs/gro": "^0.82.2",
+    "@feltjs/gro": "^0.82.3",
     "@feltjs/util": "^0.9.1",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.25.0",
     "@sveltejs/package": "^2.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "eslint": "^8.44.0",
-    "eslint-plugin-svelte": "^2.32.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "^8.49.0",
+    "eslint-plugin-svelte": "^2.33.2",
     "prettier": "^3.0.3",
     "prettier-plugin-svelte": "^3.0.3",
     "svelte": "^4.2.0",
@@ -39,12 +39,7 @@
   },
   "eslintConfig": {
     "root": true,
-    "extends": "@feltjs",
-    "ignorePatterns": [
-      "gro.config.ts",
-      "svelte.config.js",
-      "vite.config.ts"
-    ]
+    "extends": "@feltjs"
   },
   "prettier": {
     "plugins": [
