--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test": "gro test",
     "deploy": "gro deploy"
   },
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@feltjs/eslint-config": "^0.4.0",
     "@feltjs/felt-ui": "^0.66.2",
