--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@feltjs/eslint-config": "^0.4.0",
     "@feltjs/felt-ui": "^0.66.2",
     "@feltjs/gro": "^0.82.9",
-    "@feltjs/util": "^0.9.1",
+    "@grogarden/util": "^0.10.1",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.25.0",
     "@sveltejs/package": "^2.2.2",
