--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fuz.dev/template",
   "private": true,
-  "description": "a static web app and Node library template with SvelteKit, Gro, and Felt",
+  "description": "a static web app and Node library template with TypeScript, Svelte, SvelteKit, Vite, esbuild, Fuz, and Gro",
   "version": "0.0.1",
   "type": "module",
   "homepage": "https://template.fuz.dev/",
@@ -21,9 +21,9 @@
   ],
   "devDependencies": {
     "@feltjs/eslint-config": "^0.4.0",
-    "@feltjs/felt-ui": "^0.66.2",
     "@feltjs/gro": "^0.82.9",
-    "@feltjs/util": "^0.9.1",
+    "@fuz.dev/fuz": "^0.67.0",
+    "@grogarden/util": "^0.10.1",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.25.0",
     "@sveltejs/package": "^2.2.2",
