--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   ],
   "devDependencies": {
     "@feltjs/eslint-config": "^0.4.0",
-    "@feltjs/gro": "^0.83.0",
     "@fuz.dev/fuz": "^0.69.1",
+    "@grogarden/gro": "^0.85.0",
     "@grogarden/util": "^0.13.1",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.25.0",
