--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@fuz.dev/fuz-template",
+  "name": "@fuz.dev/fuz_template",
   "private": true,
   "description": "a static web app and Node library template with TypeScript, Svelte, SvelteKit, Vite, esbuild, Fuz, and Gro",
   "version": "0.0.1",
   "type": "module",
   "homepage": "https://template.fuz.dev/",
-  "repository": "https://github.com/fuz-dev/template",
+  "repository": "https://github.com/fuz-dev/fuz_template",
   "engines": {
     "node": ">=20.5"
   },
