--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npx gro check
+      - run: npx gro check --workspace
       - run: npx gro build
