--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   ],
   "devDependencies": {
     "@feltjs/eslint-config": "^0.4.0",
-    "@fuz.dev/fuz": "^0.69.1",
-    "@fuz.dev/fuz_library": "^0.1.0",
-    "@grogarden/gro": "^0.92.0",
+    "@fuz.dev/fuz": "^0.70.0",
+    "@fuz.dev/fuz_contextmenu": "^0.3.0",
+    "@fuz.dev/fuz_dialog": "^0.1.0",
+    "@fuz.dev/fuz_library": "^0.5.6",
+    "@grogarden/gro": "^0.92.4",
     "@grogarden/util": "^0.15.0",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.25.1",
