--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
 .DS_Store
-/node_modules
+node_modules
 /worktree
 
 /.svelte-kit
 /build
 /dist
+/package
 
 /.gro
 /dist_*
 
+.env
+.env.*
+!.env.example
+
 *.pem
-/.env*
 
 *.ignore
 *.ignore.*
