--- a/package.json
+++ b/package.json
@@ -22,23 +22,22 @@
   "devDependencies": {
     "@feltjs/eslint-config": "^0.4.0",
     "@fuz.dev/fuz": "^0.72.1",
-    "@fuz.dev/fuz_contextmenu": "^0.3.1",
+    "@fuz.dev/fuz_contextmenu": "^0.4.0",
     "@fuz.dev/fuz_dialog": "^0.3.0",
-    "@fuz.dev/fuz_library": "^0.9.0",
-    "@grogarden/gro": "^0.93.1",
+    "@fuz.dev/fuz_library": "^0.10.1",
+    "@grogarden/gro": "^0.95.3",
     "@grogarden/util": "^0.15.0",
     "@sveltejs/adapter-static": "^2.0.3",
-    "@sveltejs/kit": "^1.25.1",
+    "@sveltejs/kit": "^1.25.2",
     "@sveltejs/package": "^2.2.2",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "eslint": "^8.50.0",
-    "eslint-plugin-svelte": "^2.33.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.51.0",
+    "eslint-plugin-svelte": "^2.34.0",
     "prettier": "^3.0.3",
     "prettier-plugin-svelte": "^3.0.3",
     "svelte": "^4.2.1",
     "svelte-check": "^3.5.2",
-    "svelte-preprocess-esbuild": "^3.0.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "uvu": "^0.5.6"
@@ -63,5 +62,11 @@
         }
       }
     ]
+  },
+  "exports": {
+    "./example.js": {
+      "default": "./dist/example.js",
+      "types": "./dist/example.d.ts"
+    }
   }
 }
