--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   ],
   "devDependencies": {
     "@feltjs/eslint-config": "^0.4.1",
-    "@fuz.dev/fuz": "^0.75.2",
-    "@fuz.dev/fuz_contextmenu": "^0.4.2",
-    "@fuz.dev/fuz_dialog": "^0.3.2",
-    "@fuz.dev/fuz_library": "^0.12.3",
-    "@grogarden/gro": "^0.96.1",
+    "@fuz.dev/fuz": "^0.76.0",
+    "@fuz.dev/fuz_contextmenu": "^0.5.0",
+    "@fuz.dev/fuz_dialog": "^0.4.0",
+    "@fuz.dev/fuz_library": "^0.16.0",
+    "@grogarden/gro": "^0.97.0",
     "@grogarden/util": "^0.15.2",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.27.1",
@@ -66,6 +66,14 @@
     "./example.js": {
       "default": "./dist/example.js",
       "types": "./dist/example.d.ts"
+    },
+    "./package.gen.js": {
+      "default": "./dist/package.gen.js",
+      "types": "./dist/package.gen.d.ts"
+    },
+    "./package.js": {
+      "default": "./dist/package.js",
+      "types": "./dist/package.d.ts"
     }
   }
 }
