--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@fuz.dev/fuz_template",
-  "private": true,
   "description": "a static web app and Node library template with TypeScript, Svelte, SvelteKit, Vite, esbuild, Fuz, and Gro",
   "version": "0.0.1",
+  "public": true,
   "homepage": "https://template.fuz.dev/",
   "repository": "https://github.com/fuz-dev/fuz_template",
   "type": "module",
@@ -24,8 +24,8 @@
     "@fuz.dev/fuz": "^0.76.0",
     "@fuz.dev/fuz_contextmenu": "^0.5.0",
     "@fuz.dev/fuz_dialog": "^0.4.0",
-    "@fuz.dev/fuz_library": "^0.16.0",
-    "@grogarden/gro": "^0.97.0",
+    "@fuz.dev/fuz_library": "^0.16.1",
+    "@grogarden/gro": "^0.98.0",
     "@grogarden/util": "^0.15.2",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.27.1",
