--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "dist"
   ],
   "devDependencies": {
-    "@feltjs/eslint-config": "^0.4.1",
     "@fuz.dev/fuz": "^0.81.0",
     "@fuz.dev/fuz_contextmenu": "^0.7.0",
     "@fuz.dev/fuz_dialog": "^0.6.0",
     "@fuz.dev/fuz_library": "^0.23.0",
-    "@grogarden/gro": "^0.110.2",
-    "@grogarden/util": "^0.19.3",
+    "@ryanatkn/belt": "^0.20.3",
+    "@ryanatkn/eslint-config": "^0.1.0",
+    "@ryanatkn/gro": "^0.112.0",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.4.3",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
@@ -45,7 +45,7 @@
   },
   "eslintConfig": {
     "root": true,
-    "extends": "@feltjs"
+    "extends": "@ryanatkn"
   },
   "prettier": {
     "plugins": [
