--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@fuz.dev/fuz_template",
+  "name": "@ryanatkn/fuz_template",
   "version": "0.0.1",
   "description": "a static web app and Node library template with TypeScript, Svelte, SvelteKit, Vite, esbuild, Fuz, and Gro",
   "icon": "❄",
   "public": true,
   "homepage": "https://template.fuz.dev/",
-  "repository": "https://github.com/fuz-dev/fuz_template",
+  "repository": "https://github.com/ryanatkn/fuz_template",
   "type": "module",
   "engines": {
     "node": ">=20.10"
@@ -21,24 +21,21 @@
     "dist"
   ],
   "devDependencies": {
-    "@fuz.dev/fuz": "^0.81.0",
-    "@fuz.dev/fuz_contextmenu": "^0.7.0",
-    "@fuz.dev/fuz_dialog": "^0.6.0",
-    "@fuz.dev/fuz_library": "^0.23.0",
     "@ryanatkn/belt": "^0.20.3",
     "@ryanatkn/eslint-config": "^0.1.0",
+    "@ryanatkn/fuz": "^0.83.0",
     "@ryanatkn/gro": "^0.112.0",
     "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.4.3",
-    "@sveltejs/vite-plugin-svelte": "^3.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@sveltejs/kit": "^2.5.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "eslint": "^8.56.0",
     "eslint-plugin-svelte": "^2.35.1",
-    "prettier": "^3.2.4",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.9",
-    "svelte-check": "^3.6.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.1",
+    "svelte": "^4.2.11",
+    "svelte-check": "^3.6.4",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "uvu": "^0.5.6"
