--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "repository": "https://github.com/ryanatkn/fuz_template",
   "type": "module",
   "engines": {
-    "node": ">=20.10"
+    "node": ">=22.3"
   },
   "scripts": {
     "start": "gro dev",
@@ -32,7 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-svelte": "^2.36.0-next.13",
+    "eslint-plugin-svelte": "^2.36.0",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.3",
     "svelte": "^5.0.0-next.123",
