--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ryanatkn/fuz_template",
   "version": "0.0.1",
   "description": "a static web app and Node library template with TypeScript, Svelte, SvelteKit, Vite, esbuild, Fuz, and Gro",
-  "icon": "❄",
+  "glyph": "❄",
   "public": true,
   "homepage": "https://template.fuz.dev/",
   "repository": "https://github.com/ryanatkn/fuz_template",
@@ -21,11 +21,11 @@
     "dist"
   ],
   "devDependencies": {
-    "@ryanatkn/belt": "^0.22.0",
+    "@ryanatkn/belt": "^0.23.0",
     "@ryanatkn/eslint-config": "^0.1.3",
-    "@ryanatkn/fuz": "^0.105.1",
-    "@ryanatkn/gro": "^0.124.0",
-    "@ryanatkn/moss": "^0.6.0",
+    "@ryanatkn/fuz": "^0.105.2",
+    "@ryanatkn/gro": "^0.125.1",
+    "@ryanatkn/moss": "^0.6.1",
     "@sveltejs/adapter-static": "^3.0.2",
     "@sveltejs/kit": "^2.5.17",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
