--- a/package.json
+++ b/package.json
@@ -17,9 +17,6 @@
     "test": "gro test",
     "deploy": "gro deploy"
   },
-  "files": [
-    "dist"
-  ],
   "devDependencies": {
     "@ryanatkn/belt": "^0.23.0",
     "@ryanatkn/eslint-config": "^0.1.3",
@@ -61,5 +58,11 @@
         }
       }
     ]
-  }
+  },
+  "sideEffects": [
+    "**/*.css"
+  ],
+  "files": [
+    "dist"
+  ]
 }
