--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "gro dev",
     "dev": "gro dev",
     "build": "gro build",
+    "check": "gro check",
     "test": "gro test",
+    "preview": "vite preview",
     "deploy": "gro deploy"
   },
   "type": "module",
@@ -22,9 +24,9 @@
   "devDependencies": {
     "@ryanatkn/belt": "^0.24.1",
     "@ryanatkn/eslint-config": "^0.1.3",
-    "@ryanatkn/fuz": "^0.106.3",
-    "@ryanatkn/gro": "^0.128.0",
-    "@ryanatkn/moss": "^0.6.2",
+    "@ryanatkn/fuz": "^0.107.1",
+    "@ryanatkn/gro": "^0.129.0",
+    "@ryanatkn/moss": "^0.6.3",
     "@sveltejs/adapter-static": "^3.0.2",
     "@sveltejs/kit": "^2.5.18",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
