--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "devDependencies": {
     "@ryanatkn/belt": "^0.25.3",
     "@ryanatkn/eslint-config": "^0.5.5",
-    "@ryanatkn/fuz": "^0.129.2",
-    "@ryanatkn/gro": "^0.140.0",
+    "@ryanatkn/fuz": "^0.129.5",
+    "@ryanatkn/gro": "0.140.0",
     "@ryanatkn/moss": "^0.18.2",
     "@sveltejs/adapter-static": "^3.0.5",
     "@sveltejs/kit": "^2.7.0",
