--- a/.well-known/package.json
+++ b/.well-known/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ryanatkn/fuz_template",
   "version": "0.0.1",
-  "description": "a static web app and Node library template with TypeScript, Svelte, SvelteKit, Vite, esbuild, Fuz, and Gro",
+  "description": "a static web app and Node library template with TypeScript, Svelte, SvelteKit, Vite, esbuild, Gro, and Fuz",
   "glyph": "❄",
   "logo": "logo.svg",
   "logo_alt": "a friendly pixelated spider facing you",
@@ -24,13 +24,13 @@
   "devDependencies": {
     "@ryanatkn/belt": "^0.30.2",
     "@ryanatkn/eslint-config": "^0.8.0",
-    "@ryanatkn/fuz": "^0.136.1",
-    "@ryanatkn/gro": "^0.150.1",
+    "@ryanatkn/fuz": "^0.139.0",
+    "@ryanatkn/gro": "^0.151.0",
     "@ryanatkn/moss": "^0.25.0",
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.20.7",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "eslint": "^9.24.0",
+    "eslint": "^9.25.1",
     "eslint-plugin-svelte": "^3.5.1",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
@@ -38,7 +38,7 @@
     "svelte-check": "^4.1.6",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.30.1",
+    "typescript-eslint": "^8.31.1",
     "uvu": "^0.5.6"
   },
   "prettier": {
