--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,7 @@ node_modules
 /.zzz
 
 # Env
-.env
-.env.*
+.env*
 !.env.example
 !.env.*.example
 !.env.test
@@ -33,5 +32,7 @@ ignore
 .DS_Store
 Thumbs.db
 
-# GitHub
+# LLMs
 .github/copilot-instructions.md
+CLAUDE.md
+.claude
