--- a/.well-known/package.json
+++ b/.well-known/package.json
@@ -22,24 +22,24 @@
     "node": ">=22.15"
   },
   "devDependencies": {
-    "@ryanatkn/belt": "^0.30.2",
+    "@ryanatkn/belt": "^0.34.1",
     "@ryanatkn/eslint-config": "^0.8.0",
-    "@ryanatkn/fuz": "^0.143.0",
-    "@ryanatkn/gro": "^0.158.0",
-    "@ryanatkn/moss": "^0.29.0",
-    "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.20.8",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "eslint": "9.25.1",
-    "eslint-plugin-svelte": "^3.5.1",
-    "prettier": "^3.5.3",
-    "prettier-plugin-svelte": "^3.3.3",
-    "svelte": "^5.28.2",
-    "svelte-check": "^4.1.7",
+    "@ryanatkn/fuz": "^0.145.0",
+    "@ryanatkn/gro": "^0.162.1",
+    "@ryanatkn/moss": "^0.32.0",
+    "@sveltejs/adapter-static": "^3.0.9",
+    "@sveltejs/kit": "^2.37.1",
+    "@sveltejs/vite-plugin-svelte": "^6.1.4",
+    "eslint": "^9.35.0",
+    "eslint-plugin-svelte": "^3.12.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "svelte": "^5.38.7",
+    "svelte-check": "^4.3.1",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0",
-    "uvu": "^0.5.6"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.42.0",
+    "vitest": "^3.2.4"
   },
   "prettier": {
     "plugins": [
